[project]
name = "Luna"
version = "0.1.0"
description = "Default template for PDM package"
authors = []
dependencies = ["arxiv>=2.2.0", "llama-index>=0.12.41", "python-dotenv>=1.1.0", "notebook>=7.4.3"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
